Updated the '.env' template.

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ SMTP_USER=
 SMTP_PASS=
 SMTP_FROM=
 DBCONNLMT=
-DATABASE_URL_WITH_POOLING=${DATABASE_URL}?connection_limit=${DBCONNLMT}
+DATABASE_URL_WITH_POOLING="${DATABASE_URL}?connection_limit=${DBCONNLMT}"
