--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"start": "node main.js"
 	},
 	"keywords": [],
 	"author": "",
