Created a logQueue.js, and updated the .env.example with AUDIT_LOG_BACKLOG_PATH.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ SMTP_PASS=
 SMTP_FROM=
 DBCONNLMT=
 DATABASE_URL_WITH_POOLING="${DATABASE_URL}?connection_limit=${DBCONNLMT}"
+AUDIT_LOG_BACKLOG_PATH=
