--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"description": "",
 	"dependencies": {
+		"@fastify/cors": "^11.0.1",
 		"@fastify/static": "^8.1.1",
 		"@prisma/client": "^6.5.0",
 		"axios": "^1.8.4",
