--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "hrms-backend-new",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "main.js",                   
+    "bin": "main.js",                    
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "prettier --write .",
@@ -12,6 +13,18 @@
 	"license": "ISC",
 	"type": "module",
 	"description": "",
+	"pkg": {
+    "assets": [
+      "node_modules/@prisma/client/**/*",
+      "node_modules/prisma/**/*"
+    ],
+    "targets": [
+      "node20-linux-x64",
+      "node20-win-x64",
+      "node20-macos-x64"
+    ],
+    "outputPath": "dist"
+  },
 	"dependencies": {
 		"@fastify/cors": "^11.0.1",
 		"@fastify/static": "^8.1.1",
