--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "hrms-backend-new",
 	"version": "1.0.0",
-	"main": "main.js",                                       
+	"main": "main.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "prettier --write .",
@@ -14,8 +14,10 @@
 	"description": "",
 	"dependencies": {
 		"@fastify/cors": "^11.0.1",
+		"@fastify/multipart": "^9.0.3",
 		"@fastify/static": "^8.1.1",
 		"@prisma/client": "^6.5.0",
+		"aws-sdk": "^2.1692.0",
 		"axios": "^1.8.4",
 		"bcrypt": "^5.1.1",
 		"dayjs": "^1.11.13",
@@ -25,6 +27,8 @@
 		"fastify-plugin": "^5.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"luxon": "^3.6.1",
+		"mock-aws-s3": "^4.0.2",
+		"nock": "^14.0.5",
 		"node-zklib": "^1.3.0",
 		"nodemailer": "^6.10.0",
 		"p-map": "^7.0.3",
