--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"bcrypt": "^5.1.1",
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.4.7",
+		"emailjs": "^4.0.3",
 		"exceljs": "^4.4.0",
 		"fastify": "^5.2.2",
 		"fastify-plugin": "^5.0.1",
